# tjw_kernel

./: '  .gitignore  build.c  build.sh  dbuild.sh  descriptor_table.c  dis.txt  disassemble_kernel.sh  drun.sh  filesystem_virtual.h  gdb_connect.sh  gfx_vesa.c  hardware_vesa.cpp  install.sh  interrupt.asm  interrupt_handler.c  kernel.dump  kernel.h  kernel_entry.asm  kernel_entry.c  kernel_filesystem.c  kernel_filesystem.h  kernel_io.c  kernel_io.h  kernel_link.ld  kernel_memory.cpp  link32and16.ld  make_usbimg.sh  multiboot.h  multiboot2_header.asm  run.sh  test.dump  upload.sh  utility.h  video_vga_text.c  virtual_filesystem.h  x86_64_boot.asm  x86_64_entry.asm  x86_64_entry.c
src/: '  CMakeLists.txt  \  build.sh  config.sh  descriptor_table.c  descriptor_tables.c  descriptor_tables.h  development_diagnostics.h  elf64.h  filesystem.c  filesystem.h  filesystem_ext2.c  filesystem_ext2.h  filesystem_kernel.cpp  filesystem_kernel.h  filesystem_virtual.cpp  hardware_keyboard.c  hardware_keyboard.h  hardware_serial.c  hardware_serial.cpp  inconsolata16.txt  interrupt_handler.asm  interrupt_handler.c  interrupt_handler.h  interrupt_handlers.h  kernel.h  kernel_acpi.c  kernel_apic.c  kernel_asm.h  kernel_boot.asm  kernel_debug.c  kernel_debug.h  kernel_descriptor.c  kernel_descriptor_table.c  kernel_descriptor_table.h  kernel_entry.c  kernel_exceptions.c  kernel_feature.c  kernel_gdt.asm  (+48 more)
src/core/: primary_cpu_initialization.c
src/desktop_enviroment/: desktop_enviroment.c  desktop_enviroment.h
src/filesystem/: ext2_debug.c  ext2_debug.h  ext2_filesystem.c  ext2fs_debug.c  (+9 more)
(+172 files in other folders)
